<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:iconSpaceReserved="false">

    <PreferenceCategory app:title="@string/language_header">

        <ListPreference
            app:defaultValue="english"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="@string/language_key"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/ui">

        <ListPreference
            app:defaultValue="@string/dark_mode_def_value"
            app:entries="@array/dark_mode_entries"
            app:entryValues="@array/dark_mode_values"
            app:key="@string/dark_mode"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_title">
        <Preference
            app:key="web page"
            app:title="Github link">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/green1490/expense-tracker"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>